// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`styled allows for contextual overrides (background yellow) 1`] = `
<div
  class=

      {
        background: yellow;
      }
/>
`;

exports[`styled allows for contextual overrides mixed under user overrides (background yellow, color red) 1`] = `
<div
  class=

      {
        background: yellow;
        color: red;
      }
/>
`;

exports[`styled allows user overrides (background green) 1`] = `
<div
  class=

      {
        background: green;
      }
/>
`;

exports[`styled can process style props (background blue) 1`] = `
<div
  class=

      {
        background: blue;
      }
/>
`;

exports[`styled can wrap components and merge styling functions for all 1`] = `
<div
  class=

      {
        background: blue;
        color: green;
        line-height: 29px;
      }
/>
`;

exports[`styled can wrap components and merge styling objects for all 1`] = `
<div
  class=

      {
        background: blue;
        color: green;
        line-height: 19px;
      }
/>
`;

exports[`styled gives styles function user prop priority 1`] = `
<div
  class=

      {
        background: purple;
      }
/>
`;

exports[`styled gives styles object user prop priority 1`] = `
<div
  class=

      {
        background: purple;
      }
/>
`;

exports[`styled gives wrapped styles function priority 1`] = `
<div
  class=

      {
        background: grey;
      }
/>
`;

exports[`styled gives wrapped styles object priority 1`] = `
<div
  class=

      {
        background: grey;
      }
/>
`;

exports[`styled renders base styles (background red) 1`] = `
<div
  class=

      {
        background: red;
      }
/>
`;

exports[`styled respects styles arg 1`] = `
<div>
  <div
    class=

        {
          background-color: red;
        }
  >
    Panel1
  </div>
  <div
    class=

        {
          background-color: green;
        }
  >
    Panel2
  </div>
</div>
`;

exports[`styled respects styles type 1`] = `null`;
